--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "prepare": "npm run build",
     "build": "tsc --project tsconfig.json",
     "dev": "tsx src/bin.ts",
     "test": "vitest run",
